# beacon

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
beacon/: __init__.py  api.py  compose.py  config.py  demo.py  eval.py  graph.py  llm.py  models.py  plots.py  retrieval.py  synth.py  verify.py
beacon/agents/: __init__.py  privacy.py  routing.py  triage.py
docs/: architecture.md
tests/: test_api.py  test_pipeline.py
